get the data in pokemoncomponent with input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
 <app-input (PokemonList)="pokemonParentUpdate($event)"></app-input>
+<ng-container>
+  <app-pokemon [pokemonFromParent]="allpokemonFromParent"></app-pokemon>
+</ng-container>
