--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -13,14 +13,14 @@
         <h3 class="text">Bitte geben Sie der Name oder die ID des Pokomons, <br> von dem Sie Infos haben wollen</h3>
       </div>
       <div class="input-container">
-        <input type="text" class="inputClass"  placeholder="find your pokemon" >
+        <input type="text" class="inputClass"  placeholder="find your pokemon" [(ngModel)]="keyword" (ngModelChange)="search($event)" > <!-- two way binding for search-function and  -->
     </div>
       </div>
     </div>
 
   <div class="result">
     <table class="pokemon-tbl" id="tabelle">
-      <thead>
+      <thead *ngIf="searchedPokemon.length">
           <th class="row">Name</th>
           <th class="row">Id</th>
           <th class="row">Bild</th>
@@ -28,12 +28,12 @@
           <th class="row">move-name</th>
       </thead>
       <tbody >
-        <tr>
-             <td class="column"></td>
-             <td class="column"></td>
-             <td class="column"></td>
-             <td class="column"></td>
-             <td class="column"></td>
+        <tr *ngFor="let pokemon of searchedPokemon">
+             <td class="column">{{pokemon.name}}</td>
+             <td class="column">{{pokemon.id}}</td>
+             <td class="column"><img src="{{pokemon.sprites.front_default}}" alt=""></td> <!-- get the image from searched pokemon -->
+             <td class="column">{{pokemon.stats[1].stat.name}}</td>
+             <td class="column">{{pokemon.moves[1].move.name}}</td>
             </tr>
       </tbody>
   </table>
